--- a/src/styles/components/_home.scss
+++ b/src/styles/components/_home.scss
@@ -25,7 +25,6 @@
     height: 35vh;
     border: 1px solid black;
     border-radius: 50%;
-    background-color: blueviolet;
     margin: 1rem;
 }
 
@@ -239,7 +238,7 @@
 	color: #fff;
 	line-height: 40px;
 	overflow: hidden;
-	margin-left: 11.5rem;
+	margin-right: -10rem;
 }
 
 .home__UlSub {
