--- a/src/styles/components/_home.scss
+++ b/src/styles/components/_home.scss
@@ -26,6 +26,10 @@
     border: 1px solid black;
     border-radius: 50%;
     margin: 1rem;
+	background-image: url('../../fotoscv/sinpc.JPG');
+	background-position: center;
+	background-size: cover;
+	background-attachment: local;
 }
 
 .home__sub{
