--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,6 +9,7 @@
 @import './components/redesCards';
 @import './components/porfolio';
 @import './components/home';
+@import './components/ScrollBar';
 
 body {
     margin: 0px;
