--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -9,8 +9,8 @@
     height: 32rem;
     background: rgb(26,26,26);
     background: #FF8008;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #FFC837, #FF8008);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #FFC837, #FF8008); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: -webkit-linear-gradient(to right, #FFC837, #FF8008);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #FFC837, #FF8008); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
     ;
 }
@@ -30,3 +30,6 @@ background: linear-gradient(to right, #FFC837, #FF8008); /* W3C, IE 10+/ Edge, F
    }
    
 
+.textArea{
+    resize: none;
+}
